# mastodon-alt-text-generator-app

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  scan_alt_text.py
templates/: index.html  posts.html
