[project]
name = "alt-text-generator"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "openai>=1.0.0",
    "Mastodon.py>=1.8.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
alt-text-app = "app:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
